[package]
name = "glen-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
